# dida365_api_and_mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  server.py  server_StreamableHTTP.py  server_ai.py
aigens/: doc.md  py-exam.md
