[project]
name = "py-dida365-api-and-mcp"
version = "0.1.0"
description = "Dida365 API and MCP Server for task management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.3",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "uvicorn>=0.34.3",
    "starlette>=0.47.0",
]
